--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "santigarcor/laratrust": "^6.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
